# distillbert-sst2-benchmark

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: benchmark_models.py  distill_sst2_tiny.py
src/mini_distill/: __init__.py  losses.py  metrics.py
src/mini_distillation_linkedin_demo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_losses.py  test_metrics.py
