[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-distillation-linkedin-demo"
version = "0.1.0"
description = "Tiny, explainable transformer distillation demo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2.0",
  "transformers>=4.45.0",
  "datasets>=2.20.0",
  "accelerate>=0.33.0",
  "scikit-learn>=1.4.0",
  "tqdm>=4.66.0",
  "protobuf>=5.0.0",
  "sentencepiece>=0.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
